--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,10 @@ body {
 }
 
 /*-----------------footer---------------*/
+
+.andress {
+  font-style: normal;
+}
 .adress-text {
   font-style: normal;
   font-weight: normal;
