--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,16 @@ body {
   color: #212121;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 .list {
   list-style: none;
   text-decoration: none;
@@ -23,6 +33,8 @@ body {
 
 .link {
   text-decoration: none;
+  margin: 0;
+  padding: 0;
 }
 
 /*---------------header-----------*/
